# quartiles

./: .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  biome.json  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: backend.md  data-models.md  development.md  frontend.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: add-to-project.yml  deploy-production.yml  deploy-staging.yml  detect-conflicts.yml  issue-manager.yml  labeler.yml  latest-changes.yml  main.yml  playwright.yml  pre-commit.yml  smokeshow.yml  test-backend.yml  test-docker-compose.yml  validate-codecov-config.yml
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/: __init__.py  env.py
backend/app/alembic/versions/: 7c818e95cae5_add_game_tables.py  d98dd8ec85a3_edit_replace_id_integers_in_all_models_.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: game.py  items.py  leaderboard.py  login.py  private.py  puzzle.py  users.py  utils.py
backend/app/api/tests/: conftest.py  test_game_api.py
backend/app/core/: config.py  db.py  security.py
backend/app/game/: __init__.py  dictionary.py  generator.py  solver.py  types.py
backend/app/game/tests/: conftest.py  test_dictionary.py  test_generator.py  test_integration.py  test_types.py
backend/app/services/: __init__.py  daily_scheduler.py  name_generator.py  puzzle_scheduler.py
backend/app/services/tests/: __init__.py  test_daily_scheduler.py
backend/app/tests/: conftest.py  test_models.py
backend/data/: .gitignore
backend/scripts/: build_dictionary.py  download_sources.py  prestart.sh  test.sh
backend/tests/: conftest.py  test_initial_data.py  test_main.py  test_models.py  test_utils.py
backend/tests/alembic/: __init__.py  test_env.py
backend/tests/api/: test_deps.py  test_main.py
backend/tests/api/routes/: test_game_api.py  test_items.py  test_login.py  test_users.py  test_utils.py
backend/tests/core/: test_config.py  test_db.py
backend/tests/crud/: test_user.py
backend/tests/game/: __init__.py  conftest.py  test_integration.py  test_solver.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: user.py  utils.py
frontend/: Dockerfile  biome.json  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Common/: Sidebar.tsx  UserSettings.tsx
frontend/src/components/Game/: FoundWordsList.tsx  Game.tsx  GameBoard.tsx  GameInput.tsx  GameStatus.tsx  Tile.tsx  index.ts
frontend/src/components/Sidebar/: AppSidebar.tsx
frontend/src/hooks/: use-toast.ts  useGame.ts
frontend/src/routes/: __root.tsx  _layout.tsx  login.tsx  signup.tsx
frontend/src/routes/_layout/: game.tsx  index.tsx  settings.tsx
frontend/src/styles/: animations.css  theme.css
frontend/tests/: game.spec.ts
planning/: SPEC.md  claude-integration-notes.md  claude-interview.md  claude-plan.md  claude-ralph-loop-prompt.md  claude-ralphy-prd.md  claude-research.md  claude-spec.md  workflow-complete.md
planning/design/: component-specs.md  mood-board.md
planning/diagrams/: 01-system-overview.md  02-backend-architecture.md  03-authentication-flow.md  04-game-domain-architecture.md  05-gameplay-data-flow.md  06-database-erd.md  07-frontend-components.md  08-deployment.md  09-api-routes.md  10-model-schema-pattern.md
planning/reviews/: codex-review.md  gemini-review.md
planning/sections/: index.md  section-01-codebase-cleanup.md  section-02-design-foundation.md  section-03-dictionary-pipeline.md  section-04-game-logic.md  section-05-database-models.md  section-06-game-api.md  section-07-frontend-game-ui.md  section-08-daily-system.md  section-09-testing-polish.md
quartiles/: __init__.py  foo.py
scripts/: generate-client.sh
tests/: test_foo.py
